<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:id="@+id/bottom_nav_main"
        android:icon="@drawable/bottom_nav_main"
        android:title="@string/main" />

    <item
        android:id="@+id/bottom_nav_desired"
        android:title="@string/desired"
        android:icon="@drawable/bottom_nav_desired"
        />

    <item
        android:id="@+id/bottom_nav_create"
        android:title="@string/create"
        android:icon="@drawable/bottom_nav_create"
        />

    <item
        android:id="@+id/bottom_nav_search"
        android:title="@string/search"
        android:icon="@drawable/bottom_nav_search"
        />

    <item
        android:id="@+id/bottom_nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/bottom_nav_profile"
        />
</menu>