<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_login_phone_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_login_phone_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/corners_radius_background"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/login_phone_email"
        android:inputType="text"
        android:maxLength="40"
        android:paddingLeft="20sp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login" />

    <EditText
        android:id="@+id/editText_login_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corners_radius_background"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        android:maxLength="25"
        android:paddingLeft="20sp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_forgot_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_phone_email" />

    <TextView
        android:id="@+id/textView_forgot_your_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:singleLine="true"
        android:text="@string/login_forgot_your_password"
        android:textAlignment="viewEnd"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />

    <Button
        android:id="@+id/button_log_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="13sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_forgot_your_password" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_continue_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_log_in" />

    <Button
        android:id="@+id/button_continue_with_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/roboto_medium"
        android:foreground="@drawable/button_white_stroke_foreground"
        android:text="@string/continue_with_google"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_or" />


</androidx.constraintlayout.widget.ConstraintLayout>